src/objects/Apttus__APTS_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_CMDSign__RecallESignatureRequest__c</fullName>
        <description>Recall E-Signature request</description>
        <formula>IF(
	AND(
           ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), 
           ISPICKVAL(Apttus__Status__c,&quot;Other Party Signatures&quot;) 
	   ),
HYPERLINK(&quot;/apex/Apttus_DocuApi__DocuSignRecallEnvByEnvId?envelopeparentid=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_DocuApi__RecallEnvelope&quot;,&quot;Recall E-Signature Document&quot;), &quot;_self&quot;),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Recall E-Signature request</inlineHelpText>
        <label>Recall E-Signature Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMDSign__SendForESignature__c</fullName>
        <formula>IF(
AND(
OR(
ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;),
(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;),
ISPICKVAL(Apttus__Status__c,&quot;Ready for Signatures&quot;)
)
),
(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;),
ISPICKVAL(Apttus__Status__c,&quot;Signature Declined&quot;)
)
)
),
NOT(ISPICKVAL(Apttus__Status__c,&quot;In Clause Approval&quot;))),
HYPERLINK(&quot;/apex/Apttus_CMDSign__CMDocuSignCreateEnvelope?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_DocuApi__eSignature&quot;,&quot;Send For eSignatures&quot;), &quot;_self&quot;),
NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send For eSignature</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_CMDSign__ViewESignatureDocument__c</fullName>
        <description>Correct E-Signature document</description>
        <formula>IF(
	AND(
           ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), 
           ISPICKVAL(Apttus__Status__c,&quot;Other Party Signatures&quot;) 
	),
HYPERLINK(&quot;/apex/Apttus_DocuApi__DocuSignViewExistingEnvelope?envelopeparentid=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_DocuApi__ViewEnvelope&quot;,&quot;Correct E-Signature Document&quot;), &quot;_blank&quot;),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Correct E-Signature document</inlineHelpText>
        <label>Correct E-Signature Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_QPComply__RelatedProposalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal</description>
        <label>Related Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Account_Search_Field__c</fullName>
        <description>This field is used in the side bar search</description>
        <externalId>true</externalId>
        <label>Account Search Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The link to the account record to identify the external party to this agreement</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N50000001Xl0UEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Activated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who activated the agreement in the system</description>
        <label>Activated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>APTS_Agreement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Activated_Date__c</fullName>
        <description>The date the agreement was activated in the system</description>
        <label>Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Agreement_Category__c</fullName>
        <description>Used to categorize agreement types.  When setting up a new agreement type make sure to seect approrpiate values for that agreement type and to set the right default</description>
        <label>Agreement Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Mix ownership (various data assets owned by more than one country)</fullName>
                </value>
                <value>
                    <fullName>Mix ownership Legacy Cegedim only products</fullName>
                </value>
                <value>
                    <fullName>Consulting/Services/ Managed Services (with data delivery)</fullName>
                </value>
                <value>
                    <fullName>Consulting/Services/ Managed Services (without data delivery)</fullName>
                </value>
                <value>
                    <fullName>Government Solutions</fullName>
                </value>
                <value>
                    <fullName>IQVIA Local Country Data</fullName>
                </value>
                <value>
                    <fullName>International Data (eg: Midas &amp; Publications data)</fullName>
                </value>
                <value>
                    <fullName>Technology Services (Nexxus/Mobile Intelligence)</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Comprehensive</fullName>
                </value>
                <value>
                    <fullName>Preliminary</fullName>
                </value>
                <value>
                    <fullName>Full Service</fullName>
                </value>
                <value>
                    <fullName>Standalone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Agreement_Number__c</fullName>
        <description>FOR INTERNAL USE ONLY. DO NOT USE IN SCREENS, REPORTS, ETC.</description>
        <label>Agreement Number_Num (INTERNAL)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__AllowableOutputFormats__c</fullName>
        <description>The list of output formats allowed for the agreement.</description>
        <inlineHelpText>The list of output formats allowed for the agreement.</inlineHelpText>
        <label>Allowable Output Formats</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DOC</fullName>
                </value>
                <value>
                    <fullName>DOCX</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>RTF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Amendment_Effective_Date__c</fullName>
        <description>The date this amendment is effective</description>
        <label>Amendment Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Auto_Renew_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether consent is required to extend / renew this agreement</description>
        <label>Renewal Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Auto_Renew_Term_Months__c</fullName>
        <description>The number of months to extend the agreement</description>
        <label>Renewal Term (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Auto_Renewal_Terms__c</fullName>
        <description>Specifies any terms for renewal</description>
        <label>Renewal Terms</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Auto_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the agreement has an auto renewal provision</description>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Corporate Business Hours associated with the agreement</description>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Company_Signed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to contact record to identify internal signatory</description>
        <label>Company Signed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N50000001Xl0CEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Company_Signed_Date__c</fullName>
        <description>Date when internal signatory signed</description>
        <label>Company Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Company_Signed_Title__c</fullName>
        <description>Title of person signing on behalf of Company</description>
        <label>Company Signed Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Contract_Duration_Days__c</fullName>
        <description>The duration from Start Date to End Date in days</description>
        <formula>IF(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;), (Apttus__Contract_End_Date__c &gt;= Apttus__Contract_Start_Date__c)),  (Apttus__Contract_End_Date__c - Apttus__Contract_Start_Date__c) + 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Duration (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Contract_End_Date__c</fullName>
        <description>The end date for this agreement</description>
        <label>Agreement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Contract_Number__c</fullName>
        <description>The system assigned unique agreement number.  FOR INTERNAL USE ONLY.  DO NOT SHOW IN SCREENS, REPORTS, ETC.</description>
        <displayFormat>{00000000}</displayFormat>
        <label>Agreement Number_Auto (INTERNAL)</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Apttus__Contract_Start_Date__c</fullName>
        <description>The effective date of the agreement</description>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__Contracted_Days__c</fullName>
        <description>Days from Contract Start Date to Current Date if the contract is In Effect and Start Date is set.</description>
        <formula>IF(AND(NOT(ISNULL(Apttus__Contract_Start_Date__c )), ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;)), (TODAY() - Apttus__Contract_Start_Date__c ) + 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contracted Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>Detailed description of this agreement</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__ExecutedDate__c</fullName>
        <description>The date when the agreement was executed or signed</description>
        <inlineHelpText>The date when the agreement was executed or signed</inlineHelpText>
        <label>Executed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus__Executed_Copy_Mailed_Out_Date__c</fullName>
        <description>Date the final, executed copy was mailed to the other party</description>
        <label>Executed Copy Mailed Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Agreement_Number__c</fullName>
        <description>Identifies the agreement number, including the version number.  Use this field to display on screens, reports, dashboards, search filters and columns, etc.  The other agreement number fields are for internal use only.</description>
        <formula>Apttus__Agreement_Number__c  &amp; &quot;.&quot; &amp;  TEXT(CEILING(Apttus__Version_Number__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Amend__c</fullName>
        <description>Amend the agreement</description>
        <formula>IF (AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Renewed&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Activated&quot;))), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), HYPERLINK(&quot;/apex/Apttus__LightningAgreementAmend?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Amend&quot;, &quot;Amend&quot;),&quot;_self&quot;) , HYPERLINK(&quot;/apex/Apttus__AgreementAmend?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Amend&quot;, &quot;Amend&quot;),&quot;_self&quot;)),NULL)</formula>
        <inlineHelpText>Amend the agreement</inlineHelpText>
        <label>Amend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Cancel_Request__c</fullName>
        <description>Cancel the agreement request</description>
        <formula>IF (AND(OR(ISPICKVAL(Apttus__Status_Category__c,&quot;Request&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Filing&quot;)),NOT(ISPICKVAL(Apttus__Status__c,&quot;Cancelled Request&quot;))), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), HYPERLINK(&quot;/apex/Apttus__LightningAgreementCancel?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_CancelRequest&quot;, &quot;Cancel Request&quot;), &quot;_self&quot;) , HYPERLINK(&quot;/apex/Apttus__AgreementCancel?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_CancelRequest&quot;, &quot;Cancel Request&quot;), &quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cancel the agreement request</inlineHelpText>
        <label>Cancel Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Execute__c</fullName>
        <description>Activates the agreement</description>
        <formula>IF (AND(OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Filing&quot;), AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;),ISPICKVAL(Apttus__Source__c,&quot;Other Party Paper&quot;))),NOT(ISPICKVAL(Apttus__Status__c,&quot;In Clause Approval&quot;))), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;), HYPERLINK(&quot;/apex/Apttus__ActivateAgreement?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Activate&quot;, &quot;Activate&quot;),&quot;_self&quot;) , HYPERLINK(&quot;/apex/Apttus__AgreementActivate?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Activate&quot;, &quot;Activate&quot;),&quot;_self&quot;)),NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Activates the agreement</inlineHelpText>
        <label>Activate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Expire__c</fullName>
        <description>Expire the agreement</description>
        <formula>IF (AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Renewed&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Activated&quot;))),IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),  HYPERLINK(&quot;/apex/Apttus__LightningAgreementExpire?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Expire&quot;, &quot;Expire&quot;),&quot;_self&quot;) ,  HYPERLINK(&quot;/apex/Apttus__AgreementExpire?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Expire&quot;, &quot;Expire&quot;),&quot;_self&quot;)), NULL)</formula>
        <inlineHelpText>Expire the agreement</inlineHelpText>
        <label>Expire</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Generate_Protected_Agreement__c</fullName>
        <description>Generates a read-only password protected agreement</description>
        <formula>IF (ISPICKVAL(Apttus__Status_Category__c, &quot;Request&quot;), HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b50000000lgo8&quot;&amp;&quot;&amp;eid=&quot;&amp;Id, &quot;Generate Agreement&quot;,&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Protected (OBSOLETE)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Generate_Supporting_Document__c</fullName>
        <formula>IF (NOT(OR(ISPICKVAL(Apttus__Status_Category__c,&quot;Import&quot;),Apttus__GoogleDriveEnabled__c == true)), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),   HYPERLINK(&quot;/apex/Apttus__LightningSelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Generate_Supporting_Document&amp;templateType=Supporting_Document&quot;, IMAGE(&quot;/resource/Apttus__Button_GenerateSupportingDocument&quot;, &quot;Generate Supporting Document&quot;),&quot;_self&quot;),   HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Generate_Supporting_Document&amp;templateType=Supporting_Document&quot;, IMAGE(&quot;/resource/Apttus__Button_GenerateSupportingDocument&quot;, &quot;Generate Supporting Document&quot;),&quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Supporting Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Generate_Unprotected_Agreement__c</fullName>
        <description>Generates an editable unprotected agreement</description>
        <formula>IF (ISPICKVAL(Apttus__Status_Category__c, &quot;Request&quot;), HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b50000000lgoN&quot;&amp;&quot;&amp;eid=&quot;&amp;Id, &quot;Generate Agreement&quot;,&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Unprotected (OBSOLETE)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Regenerate_Agreement__c</fullName>
        <description>Conditionally show the &quot;Regenerate&quot; custom button</description>
        <formula>IF (AND(OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Filing&quot;)),NOT(ISPICKVAL(Apttus__Status__c,&quot;In Clause Approval&quot;))), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), HYPERLINK(&quot;/apex/Apttus__LightningSelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Regenerate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Regenerate&quot;, &quot;Regenerate&quot;), &quot;_self&quot;), HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Regenerate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Regenerate&quot;, &quot;Regenerate&quot;), &quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Regenerate the agreement</inlineHelpText>
        <label>Regenerate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Renew__c</fullName>
        <description>Renew the agreement</description>
        <formula>IF (OR(AND((ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;)),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Renewed&quot;)),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Activated&quot;)))), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),   HYPERLINK(&quot;/apex/Apttus__LightningAgreementRenew?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Renew&quot;, &quot;Renew&quot;),&quot;_self&quot;),   HYPERLINK(&quot;/apex/Apttus__AgreementRenew?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Renew&quot;, &quot;Renew&quot;),&quot;_self&quot;)), NULL)</formula>
        <inlineHelpText>Renew the agreement</inlineHelpText>
        <label>Renew</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Return_To_Requestor__c</fullName>
        <description>Return the agreement to the requestor</description>
        <formula>IF ((ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;)), HYPERLINK(&quot;/apex/Apttus__AgreementReturnToRequestor?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_ReturnToRequestor&quot;, &quot;Return To Requestor&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Return the agreement to the requestor</inlineHelpText>
        <label>Return To Requestor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Send_To_Other_Party_For_Review__c</fullName>
        <description>Send agreement for review</description>
        <formula>IF (AND(OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;)),NOT(ISPICKVAL(Apttus__Status__c,&quot;In Clause Approval&quot;)),Apttus__GoogleDriveEnabled__c == false),IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), HYPERLINK(&quot;/apex/Apttus__SendForReview?id=&quot;&amp;Id &amp; &quot;&amp;action=Send_To_Other_Party_For_Review&quot;, IMAGE(&quot;/resource/Apttus__Button_SendForReview&quot;, &quot;Send For Review&quot;), &quot;_self&quot;), HYPERLINK(&quot;/apex/Apttus__SendEmail?id=&quot;&amp;Id &amp; &quot;&amp;action=Send_To_Other_Party_For_Review&quot;, IMAGE(&quot;/resource/Apttus__Button_SendForReview&quot;, &quot;Send For Review&quot;), &quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Send agreement for review</inlineHelpText>
        <label>Send For Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Send_To_Other_Party_For_Signatures__c</fullName>
        <description>Send the agreement for signatures</description>
        <formula>IF (AND(OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;)),NOT(ISPICKVAL(Apttus__Status__c,&quot;In Clause Approval&quot;))),IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), HYPERLINK(&quot;/apex/Apttus__LightningSendEmailWizard?id=&quot;&amp;Id &amp; &quot;&amp;action=Send_To_Other_Party_For_Signatures&quot;, IMAGE(&quot;/resource/Apttus__Button_SendForSignatures&quot;, &quot;Send For Signatures&quot;), &quot;_self&quot;), HYPERLINK(&quot;/apex/Apttus__SendEmail?id=&quot;&amp;Id &amp; &quot;&amp;action=Send_To_Other_Party_For_Signatures&quot;, IMAGE(&quot;/resource/Apttus__Button_SendForSignatures&quot;, &quot;Send For Signatures&quot;), &quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Send the agreement for signatures</inlineHelpText>
        <label>Send For Signatures</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Send_To_Third_Party__c</fullName>
        <formula>IF (OR(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;), AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;),ISPICKVAL(Apttus__Source__c,&quot;Other Party Paper&quot;))), HYPERLINK(&quot;/servlet/servlet.Integration?lid=00b50000000l7uN&quot;&amp;&quot;&amp;eid=&quot;&amp;Id, &quot;Send To Other Party&quot;, &quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send To Other Party (OBSOLETE)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Submit_For_Changes__c</fullName>
        <description>Submit agreement for changes</description>
        <formula>IF (OR(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Authoring&quot;),ISPICKVAL(Apttus__Source__c,&quot;Other Party Paper&quot;)),(ISPICKVAL(Apttus__Status_Category__c,&quot;In Signatures&quot;))),HYPERLINK(&quot;/apex/Apttus__AgreementSubmitChanges?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_SubmitForChanges&quot;, &quot;Submit For Changes&quot;), &quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Submit agreement for changes</inlineHelpText>
        <label>Submit For Changes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Submit_Request__c</fullName>
        <description>Submit the agreement request</description>
        <formula>IF (AND(ISPICKVAL(Apttus__Status_Category__c,&quot;Request&quot;),OR(ISPICKVAL(Apttus__Status__c,&quot;Request&quot;),ISPICKVAL(Apttus__Status__c,&quot;In Amendment&quot;),ISPICKVAL(Apttus__Status__c,&quot;In Renewal&quot;),ISPICKVAL(Apttus__Status__c,&quot;&quot;))), HYPERLINK(&quot;/apex/Apttus__AgreementSubmitRequest?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_SubmitRequest&quot;, &quot;Submit Request&quot;), &quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Submit the agreement request</inlineHelpText>
        <label>Submit Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_Terminate__c</fullName>
        <description>Terminate the agreement</description>
        <formula>IF (OR(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Renewed&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Activated&quot;)))),IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;), HYPERLINK(&quot;/apex/Apttus__LightningAgreementTerminate?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Terminate&quot;, &quot;Terminate&quot;),&quot;_self&quot;), HYPERLINK(&quot;/apex/Apttus__AgreementTerminate?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_Terminate&quot;, &quot;Terminate&quot;),&quot;_self&quot;)), NULL)</formula>
        <inlineHelpText>Terminate the agreement</inlineHelpText>
        <label>Terminate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_View_Draft_Contract__c</fullName>
        <description>Conditionally show the &quot;Preview&quot; custom button if the contract status is Request</description>
        <formula>IF (ISPICKVAL(Apttus__Status_Category__c, &quot;Request&quot;), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),   HYPERLINK(&quot;/apex/Apttus__LightningSelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Preview_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Preview&quot;, &quot;Preview&quot;),&quot;_self&quot;),   HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot; &amp;Id &amp; &quot;&amp;action=Preview_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Preview&quot;, &quot;Preview&quot;),&quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Preview the agreement</inlineHelpText>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FF_View_Final_Contract__c</fullName>
        <description>Conditionally show the &quot;Generate&quot; custom button if the contract status category is &quot;Request&quot;.</description>
        <formula>IF (ISPICKVAL(Apttus__Status_Category__c, &quot;Request&quot;), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),  HYPERLINK(&quot;/apex/Apttus__LightningSelectTemplate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;) ,  HYPERLINK(&quot;/apex/Apttus__SelectTemplate?id=&quot;&amp;Id &amp; &quot;&amp;action=Generate_Agreement&amp;templateType=Agreement&quot;, IMAGE(&quot;/resource/Apttus__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Generate the agreement</inlineHelpText>
        <label>Generate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ImportSupportingDocument__c</fullName>
        <formula>IF ((Apttus__VersionAware__c ), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),   HYPERLINK(&quot;/apex/Apttus__LightningOfflineDocumentImport?action=ImportSupportingDocument&amp;id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus__Button_ImportSupportingDocument&quot;, &quot;Import Supporting Document&quot;),&quot;_self&quot;),   HYPERLINK(&quot;/apex/Apttus__OfflineDocumentImport?action=ImportSupportingDocument&amp;id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus__Button_ImportSupportingDocument&quot;, &quot;Import Supporting Document&quot;),&quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Import Supporting Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Import_Offline_Document__c</fullName>
        <description>Conditionally show the &quot;Import Document&quot; custom link if the status category is not &quot;In Effect&quot; or &quot;Expired&quot; or &quot;Terminated&quot; or &quot;Amended&quot; or &quot;Cancelled&quot; or &quot;Import&quot;</description>
        <formula>IF (NOT(OR(ISPICKVAL(Apttus__Status_Category__c, &quot;In Effect&quot;), ISPICKVAL(Apttus__Status_Category__c, &quot;Expired&quot;),ISPICKVAL(Apttus__Status_Category__c, &quot;Terminated&quot;),ISPICKVAL(Apttus__Status_Category__c, &quot;Amended&quot;),ISPICKVAL(Apttus__Status_Category__c, &quot;Cancelled&quot;),ISPICKVAL(Apttus__Status_Category__c, &quot;Import&quot;),Apttus__GoogleDriveEnabled__c == true)), IF(OR($User.UIThemeDisplayed == &apos;Theme4d&apos;, $User.UIThemeDisplayed == &apos;Theme4t&apos;, $User.UIThemeDisplayed == &apos;Theme4u&apos;),   HYPERLINK(&quot;/apex/Apttus__LightningOfflineDocumentImport?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus__Button_ImportOfflineDocument&quot;, &quot;Import Offline Document&quot;),&quot;_self&quot;),   HYPERLINK(&quot;/apex/Apttus__OfflineDocumentImport?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus__Button_ImportOfflineDocument&quot;, &quot;Import Offline Document&quot;),&quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Import Offline Document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__InitiateTermination__c</fullName>
        <description>Conditionally show the &quot;Initiate Termination&quot; custom button.</description>
        <formula>IF (OR(AND(ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Amended&quot;)), NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Renewed&quot;)),NOT(ISPICKVAL(Apttus__Status__c,&quot;Being Terminated&quot;)))),HYPERLINK(&quot;/apex/Apttus__AgreementTerminationInitiate?id=&quot; &amp; Id, IMAGE(&quot;/resource/Apttus__Button_InitiateTermination&quot;, &quot;Initiate Termination&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initiate Termination</label>
        <type>Text</type>
    </fields>
</CustomObject>